After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 629790 - Missing annotations in Gio
Missing annotations in Gio
Status: RESOLVED FIXED
Product: gobject-introspection
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gobject-introspection Maintainer(s)
gobject-introspection Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2010-09-15 19:05 UTC by Simon Pena
Modified: 2015-02-07 16:55 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch adding some GApp, GAppInfo, etc annotations (1.65 KB, patch)
2010-09-15 19:06 UTC, Simon Pena
none Details | Review

Description Simon Pena 2010-09-15 19:05:26 UTC
g-ir-scanner now makes less assumptions, needing additional annotations. As a result, many Gio functions are non-introspectable now due to the lack of 'transfer mode' information.
Comment 1 Simon Pena 2010-09-15 19:06:11 UTC
Created attachment 170364 [details] [review]
Patch adding some GApp, GAppInfo, etc annotations
Comment 2 André Klapper 2015-02-07 16:55:05 UTC
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]