gio-2.0.c: Add missing annotations

Add 'transfer mode' annotations for GAction, GActionGroup, GAppInfo,
GApplication and GAsyncInitable

https://bugzilla.gnome.org/show_bug.cgi?id=629790